--- a/recruitment.html
+++ b/recruitment.html
@@ -3,175 +3,342 @@
 
 <head>
   <title>Recruitment</title>
+
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1,
+shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet"
+href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <!-- Custom styles for this template -->
-  <link href="css/modern-business.css" rel="stylesheet">
+  <!-- <link href="css/modern-business.css" rel="stylesheet"> -->
   <link href="tridelta.css" rel="stylesheet">
 
+
   <!-- Social Media Icons-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+  <script
+src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script
+src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script
+src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script defer
+src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <script defer src="/vendor/bootstrap/js/fontawesome-all.js"></script>
 
+  <!-- test caro -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet"
+href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <script
+src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script
+src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script
+src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+<style>
+.carousel-inner img {
+  width: 100%;
+  height: 100%;
+}
+.full-container{
+  margin-right: -2000px;
+  margin-left: -2000px;
+}
+.full-content{
+  padding-left: 2000px;
+  padding-right: 2000px;
+}
+
+.full-padding{
+  padding-top: 150px;
+  padding-bottom:150px;
+}
+
+hr.style6 {
+  border-top: 2px dotted pink;
+}
+.carousel-slide{
+  width:300px;
+  height:300px;
+}
+</style>
 </head>
+
+
 
 <body>
 
- <!-- Navigation -->
- <div id="menu" class="navbar navbar-default navbar-custom">
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color:#FEA17E">
-    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-      <ul class="navbar-nav mr-auto" >
-        <li class="nav-item">
-          <a class="nav-link" href="aboutus.html">About Us</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="recruitment.html">Recruitment</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="events.html">Events</a>
-        </li>
-      </ul>
-    </div>
+  <!-- Navigation -->
+  <div id="menu" class="navbar navbar-default navbar-custom">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top"
+style="background-color:#FEA17E">
+      <div class="navbar-collapse collapse w-100 order-1 order-md-0
+dual-collapse2">
+        <ul class="navbar-nav mr-auto" >
+          <li class="nav-item">
+            <a class="nav-link" href="aboutus.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active"
+href="recruitment.html">Recruitment</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="events.html">Events</a>
+          </li>
+        </ul>
+      </div>
 
-    <div class="mx-auto order-0">
-      <a class="navbar-brand mx-auto" href="index.html">
-        <img src = "images/logo.png" class = "logo-margin w3-hover-opacity" width="100" alt="logo thing">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </div>
+      <div class="mx-auto order-0">
+        <a class="navbar-brand mx-auto" href="index.html">
+          <img src = "images/logo.png" class = "logo-margin
+w3-hover-opacity" width="100" alt="logo thing">
+        </a>
+        <button class="navbar-toggler" type="button"
+data-toggle="collapse" data-target=".dual-collapse2">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
 
-    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="leadership.html">Leadership</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="sisterhood.html">Sisterhood</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="philanthropy.html">Philanthropy</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</div>
-
-<!-- BANNER IMAGE-->
-
-<div class="banner">
-  <img class="banner-image" src="./images/events/spiritnight.jpg">
-  <div class="banner-text">
-    <p>Recruitment</p>
+      <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="leadership.html">Leadership</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sisterhood.html">Sisterhood</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="philanthropy.html">Philanthropy</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </div>
-</div>
 
-<!-- Page Content -->
-
-<div class="container" style="margin-bottom:7.5%">
-  <!-- Page Heading/Breadcrumbs -->
-  <div class="recruitment-section">
-    <div class="row">
-      <!-- Post Content Column -->
-      <div class="col-lg-4">
-        <!-- Preview Image -->
-        <img class="img-fluid rounded" src="./images/recruitment/delilah.jpg" alt="">
-        <div class ="recruitment-chair">
-          Contact Info
-        </div>
-        <div class = "recruitment-dlm">
-          email @ ucsd.edu
-          <br>
-          (xxx) - xxx xxxx
-        </div>
-      </div>
-      <div class="col-lg-8">
-        <div class ="recruitment-dlm">
-          A letter from our
-        </div>
-        <div class = "recruitment-chair">
-          Recruitment Chair
-        </div>
-        <br>
-        <div class="recruitment-body">
-          Welcome to Tri Delta at UCSD! I would like to invite you to take a look around and see exactly what makes this chapter such an incredible home for my sisters and me. The Gamma Lambda chapter here at UCSD is full of talented, brilliant women with resounding dedication to each other and an outstanding drive to succeed. 
-          We are brave, bold, and kind to each other, our Panhellenic sisters, and the UCSD community. We are passionate about service and striving to be the best versions of ourselves. And we are dedicated to helping women live, learn, and lead.
-          I hope my sisters and I can provide an authentic opportunity for you to Bring You, your hopes, aspirations, failures, and successes. As the Recruitment Chair of the Tri Delta chapter at UCSD I can say with the utmost certainty that I’ve never encountered such an incredibly funny, witty, and compassionate group of young women. They truly embody our values of truth, self sacrifice, and friendship. Welcome to our chapter and I hope you experience the love and kindness of women I am honored to call sisters. 
-        </div>
-        <div class="recruitment-dlm">
-          Delta Love and Mine, 
-        </div>
-        <h4 style="text-align:center">
-          Delilah Kline
-        </h4>
-        <div class="recruitment-dlm">
-          Recruitment Chair  
-        </div>
-      </div>
-    </div> <!-- ROW ENDS-->
-  </div> <!-- RECRUITMENT SECTION CLASS ENDS -->
-
-  <!-- PUT CLOSING DIV HERE FOR CONTAINER-->
-
-  <div>
-
-    <div class="sister-title" style="text-align:center;">
-      Formal Recruitment
+  <!-- Page Content -->
+  <div class="banner">
+    <img class="banner-image" src="./images/events/spiritnight.jpg">
+    <div class="banner-text">
+      <p>Philanthropy</p>
     </div>
-    <div class="row">
-      <div class="col-lg-3">
-      </div>
-      <div class = "col-lg-6">
-        <div class = "sister-body" style="text-align:left;">
-         This is where information regarding the recruitment process will go. It have provide information about recruitment events, event times, event locations, and the general time-line of the recruitment process.
-       </div>
-     </div>
-   </div>
-
-   <div class = "sister-title" style="text-align:center;">
-    Current Open Bidding
   </div>
-  <div class="row">
-    <div class = "col-lg-3">
-    </div>
-    <div class="col-lg-6">
-      <div class= "sister-body" style="text-align:left;">
-        This is also known as Informal Recruitment. Although most sororities finish the recruitment process after Fall Quarter, TriDelta continues to recruit in Winter or Spring. This section will provide information on how to continue the recruitment process during Winter or Spring for the prospective members.
-      </div>
-    </div>
-  </div> <!-- CLOSING CONTAINER -->
-</div>
-</div>
 
+  <!-- Page Content -->
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-</body>
-<!--FOOTER START -->   
-<footer class="py-3" style="background-color:#FEA17E">
   <div class="container">
+    <!-- Page Heading/Breadcrumbs -->
+
+    <div class="container" style="margin-bottom:5em">
+      <p
+style="font-family:cursive;font-size:3.2vw;margin-top:2em;margin-bottom:2em;
+text-align:center"> <i>Find your friends for life</i><p>
+    <div>
+        <div class="row" style="margin-bottom:5em">
+          <div class="col-lg-6">
+            <div class = "sister-title">
+              Formal Recruitment
+            </div>
+            <div class = "sister-body">
+            <b>Why Tri Delta?</b>
+            Tri Delta offers you a lifelong bond of friendship with women
+who are share similar aspirations and goals.
+            <br><br>
+            In Tri Delta, you are a unique and valuable part of a
+connected whole. We don't want you to come here and be like
+us. We want you to come here and be you.
+            <br><br>
+            Register for Fall Recruitment using the link below!
+            <br><br>
+            <a
+href="https://enroll.icsrecruiter.com/pan/UNCASD#/enroll/enrollment-disclaimer">
+            <div style="color: #0000EE">
+            https://enroll.icsrecruiter.com/pan/UNCASD#/enroll/enrollment-disclaimer
+            </div>
+            </a>
+            </div>
+
+          </div>
+          <div class ="col-lg-6">
+            <div id="demo" class="carousel slide" data-ride="carousels"
+style="margin-top:2.5em">
+
+              <!-- Indicators -->
+              <ul class="carousel-indicators">
+                <li data-target="#demo" data-slide-to="0"
+class="active"></li>
+                <li data-target="#demo" data-slide-to="1"></li>
+                <li data-target="#demo" data-slide-to="2"></li>
+              </ul>
+
+              <!-- The slideshow -->
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./images/sisterhood/dd2.png" alt="Los Angeles"
+width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/sisterhood/dd2.png" alt="Chicago"
+width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/sisterhood/dd2.png" alt="New York"
+width="1100" height="500">
+                </div>
+              </div>
+
+              <!-- Left and right controls -->
+              <a class="carousel-control-prev" href="#demo"
+data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+              </a>
+              <a class="carousel-control-next" href="#demo"
+data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+        <hr class="style6">
+      <div>
+        <div class="row" style="margin-bottom:5em">
+          <div class="col-lg-6 order-md-12">
+            <div class = "sister-title">
+              Current Open Bidding
+            </div>
+            <div class = "sister-body">
+        Current Open Bidding (COB) is recruitment that happens outside of
+Fall Formal recruitment. It is a more informal recruitment
+process, which allows potential new members to get to know current
+members better.<br><br> Events include beach bonfires, lunch at
+the Farmer's Market, and frozen yogurt at Yogurtworld. <br><br>Our
+chapter usually has COB during Winter and/or Spring quarter, but
+we currently are not doing COB this Spring Quarter!
+            </div>
+          </div>
+          <div class ="col-lg-6 order-md-1">
+            <div id="demo2" class="carousel slide" data-ride="carousel"
+style="margin-top:3.5em">
+
+              <!-- Indicators -->
+              <ul class="carousel-indicators">
+                <li data-target="#demo2" data-slide-to="0"
+class="active"></li>
+                <li data-target="#demo2" data-slide-to="1"></li>
+                <li data-target="#demo2" data-slide-to="2"></li>
+              </ul>
+
+              <!-- The slideshow -->
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./images/sisterhood/dd2.png" alt="Los Angeles"
+width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/sisterhood/dd2.png" alt="Chicago"
+width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/sisterhood/dd2.png" alt="New York"
+width="1100" height="500">
+                </div>
+              </div>
+
+              <!-- Left and right controls -->
+              <a class="carousel-control-prev" href="#demo2"
+data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+              </a>
+              <a class="carousel-control-next" href="#demo2"
+data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr class="style6">
+              <div class="row" style="margin-bottom:5em">
+          <div class="col-lg-6">
+            <div class = "sister-title">
+              Welcoming Our New Members
+            </div>
+            <div class = "sister-body">
+            <b>Acceping a bid from Tri Delta was one of the most exciting
+memories we've experienced at UCSD.</b>
+            <br><br>
+            We know that the recruitment process can be overwhelming, but
+after accepting your bid, our sisters will immediately welcome
+you into the sisterhood. We've prepared many fun bonding
+events, like <b>Big-Little Week, Beach Bonfires, and Movie
+Nights</b> that you can look forward to after you join!
+            <br><br>
+            </div>
+
+          </div>
+          <div class ="col-lg-6">
+            <div id="demo3" class="carousel slide" data-ride="carousel"
+style="margin-top:2.5em">
+
+              <!-- Indicators -->
+              <ul class="carousel-indicators">
+                <li data-target="#demo3" data-slide-to="0"
+class="active"></li>
+                <li data-target="#demo3" data-slide-to="1"></li>
+                <li data-target="#demo3" data-slide-to="2"></li>
+              </ul>
+
+              <!-- The slideshow -->
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./images/recruitment/recruit2.jpg" alt=""
+width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/sisterhood/dd2.png" alt=""
+width=1100" height="500">
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/sisterhood/dd2.png" alt=""
+width="1100" height="500">
+                </div>
+              </div>
+
+
+              <!-- Left and right controls -->
+              <a class="carousel-control-prev" href="#demo3"
+data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+              </a>
+              <a class="carousel-control-next" href="#demo3"
+data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+              </a>
+            </div>
+          </div>
+        </div>
+  </div> <!--  CONTAINER -->
+</body>
+
+<!--FOOTER START -->
+<footer class="py-3" style="background-color:#FEA17E">
+  <div class="container"">
     <div class="row">
       <div class="col-sm-4">
         <div class="footer-text1">
-          Delta Delta Delta 
-          <br> 
+          Delta Delta Delta
+          <br>
           <div class="gamma-lambda">
-            Gamma Lambda 
+            Gamma Lambda
           </div>
           University of California,
           <br>
@@ -180,15 +347,21 @@
       </div>
 
       <div class="col-sm-4 login">
-        <div class="footer-text">
+        <div class="footer-text" >
           GINsystem Log In
         </div>
         <div class="ginsystem-login">
-          <form action="https://app.ginsystem.us/login" method="post" target="blank">
+          <form action="https://app.ginsystem.us/login" method="post"
+target="blank">
             <input type="hidden" name="parent_group" value="ddd">
-            <input type="text" name="username" class="username form-control" placeholder="Delta Delta Delta Username" required>
-            <input type="password" name="password" class="password form-control" placeholder="Delta Delta Delta Password" required>
-            <button type="submit" class="btn btn-default gin-login">Log In</button>
+            <input type="text" name="username" class="username
+form-control" placeholder="Delta Delta Delta Username"
+required>
+            <input type="password" name="password" class="password
+form-control" placeholder="Delta Delta Delta Password"
+required>
+            <div style="text-align:center"><button type="submit"
+class="btn btn-default gin-login">Log In</button></div>
           </form>
         </div>
       </div>
@@ -211,11 +384,19 @@
         </div>
       </div><!--col-sm-4-->
     </div> <!--row-->
+
     <div class="copy-right"><!--row-->
       &copy; Copyright Group Interactive Networks (GIN) | Delta Delta Delta
     </div>
+
   </div> <!--container-->
 </footer>
 <!-- FOOTER END -->
+
+<!-- Bootstrap core JavaScript -->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+
 
 </html>
