--- a/sisterhood.html
+++ b/sisterhood.html
@@ -26,52 +26,55 @@
     height: 100%;
   }
 </style>
-  <!-- Navigation -->
-  <div id="menu" class="navbar navbar-default navbar-custom">
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color:#FEA17E">
-      <div id="left-nav" class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="aboutus.html">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="recruitment.html">Recruitment</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="events.html">Events</a>
-          </li>
-        </ul>
-      </div>
 
-      <div class="mx-auto order-0">
-        <a class="navbar-brand mx-auto" href="index.html">
-          <img src = "images/logo.png" class = "logo-margin w3-hover-opacity" width="100" alt="logo thing">
-        </a>
-        <button id="hamburger" class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
-
-        
-      <div class="navbar-collapse collapse w-100 order-2 dual-collapse2">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="leadership.html">Leadership</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="sisterhood.html">Sisterhood</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="philanthropy.html">Philanthropy</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </div>
 </head>
 
 
 <body>
+<!-- Navigation -->
+  <div class="container">
+    <img class="logo" src="./images/LOGO.png">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar10">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbar10">
+                <ul class="navbar-nav nav-fill w-100">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Our Chapter
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="aboutus.html">About Us</a>
+                        <a class="dropdown-item" href="leadership.html">Leadership</a>
+                    </li>
+                   <!--  <li class="nav-item">
+                        <a class="nav-link" href="aboutus.html">About Us</a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="recruitment.html">Recruitment</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="philanthropy.html">Philanthropy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sisterhood.html">Sorority Life</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" href="leadership.html">Leadership</a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="events.html">Events</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 
   <!-- BANNER IMAGE-->
@@ -86,23 +89,24 @@
   <div class="sisterhood-page">
     <div class="container">
 
+<!--
       <div class="sister-summary">
         Having a sisterhood as tight-knit as ours not only serves as an amazing support system, but also creates memories that will last a lifetime. Our annual sisterhood events include sisterhood retreats, Big/Little reveal, weekly sisterhood events, and much more! We have various 'Deltas Only' events throughout the year to strengthen our sisterhood and explore San Diego! Some events going to a Padres game, photoshoots at pumpkin patches, haunted hayrides, and beach bonfires.
       </div>
+-->
 
 
     </br>
     <div class="container sister-details">
       <div class="row">
         <div class="col-md-8">
-          <div class="sister-title">Big &amp; Little Reveal</div>
+            <div class="sister-title"><h1>Sisterhood</h1></div>
           <div class="sister-body">
-           Big &amp; Little Reveal is definitely one of the highlights of the quarter when we do recruitment. Throughout the weekend, new members are showered with clues, treats and gifts from their mystery Bigs. It’s all fun and excitement as each new member spends all weekend trying to piece together the clues to guess which sister she’ll get to call her Big. 
+            Having a sisterhood as tight-knit as ours not only serves as an amazing support system, but also creates memories that will last a lifetime. Our annual sisterhood events include sisterhood retreats, Big/Little reveal, weekly sisterhood events, and much more! We have various 'Deltas Only' events throughout the year to strengthen our sisterhood and explore San Diego! Some events going to a Padres game, photoshoots at pumpkin patches, haunted hayrides, and beach bonfires.
            <br>
-           <br>
-           Reveal usually happens after Monday night meeting. Littles received their last basket on Monday which includes a costume for them to wear to reveal. Their big and family line all coordinate their outfits to match the little's costume. It is so amazing to see every little's face light up when their big is revealed. Once every Big &amp; Little pairing is revealed and pictures are taken, all the different family lines go off to celebrate. In the past, we've had some families go to In-N-Out, BJ's, and La Jolla Shores!
          </div><!--end sister-body-->
        </div>
+          <!-- sisterhood, delta dates, formals -->
        <!-- The slideshow -->
        <div class="col-md-4">
         <div id="demo" class="carousel slide w3-mobile" data-ride="carousel">
@@ -134,7 +138,7 @@
   <div class="container sister-details">
     <div class="row">
       <div class="col-md-7 order-md-12">
-        <div class="sister-title">Retreats</div>
+        <div class="sister-title">Formals</div>
         <div class="sister-body1">
          Twice a year, our chapter decides to go on a mini get-away with all of our sisters! The first retreat of the year happens right before school starts. This retreat allows for our returning members to bond and reconnect with each as we prepare for formal fall recruitment. 
        </br></br>
@@ -143,6 +147,12 @@
    </div><!--end col-md-7-->
    <!-- The slideshow -->
    <div class="col-md-5 order-md-1">
+        <div id="stage">
+            <a href="./images/sisterhood/bb1.jpeg" title="Coachella '17"><img src="./images/sisterhood/bb1.jpeg" width="360" height="270"></a>
+            <a href="./images/sisterhood/bb2.jpg" title="Coachella '17"><img src="./images/sisterhood/bb2.jpg" width="360" height="270"></a>
+            <a href="./images/sisterhood/bb4.jpg" title="Sun God '17"><img src="./images/sisterhood/bb4.jpg" width="360" height="270"></a>
+        </div>
+<!--
     <div id="demo" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner polaroid">
         <div class="carousel-item active">
@@ -160,6 +170,7 @@
       </div>
     </div>
   </div>
+-->
   <!--slideshow end-->
 </div><!--end row-->
 </div> <!--end container-->
@@ -175,11 +186,11 @@
       </div>
     </div>
     <div class="col-md-4">
-        <div id="stage">
-            <a href="./images/sisterhood/dd1.jpeg" title="Sun God '17"><img src="./images/sisterhood/dd1.jpeg" width="360" height="270"></a>
-            <a href="./images/sisterhood/dd2.png" title="Sun God '17"><img src="./images/sisterhood/dd2.png" width="360" height="270"></a>
-            <a href="./images/sisterhood/dd3.jpg" title="Sun God '17"><img src="./images/sisterhood/dd3.jpg" width="360" height="270"></a>
-            <a href="./images/sisterhood/dd4.jpg" title="Sun God '17"><img src="./images/sisterhood/dd4.jpg" width="360" height="270"></a>
+        <div id="stage3">
+            <a class="mySlides" href="./images/sisterhood/dd1.jpeg" title="Sun God '17"><img src="./images/sisterhood/dd1.jpeg" width="360" height="270"></a>
+            <a class="mySlides" href="./images/sisterhood/dd2.png" title="Sun God '17"><img src="./images/sisterhood/dd2.png" width="360" height="270"></a>
+            <a class="mySlides" href="./images/sisterhood/dd3.jpg" title="Sun God '17"><img src="./images/sisterhood/dd3.jpg" width="360" height="270"></a>
+            <a class="mySlides" href="./images/sisterhood/dd4.jpg" title="Sun God '17"><img src="./images/sisterhood/dd4.jpg" width="360" height="270"></a>
         </div>
 <!--
       <div id="demo" class="carousel slide" data-ride="carousel">
@@ -213,7 +224,7 @@
 
 </div>
 </div>
-</div>
+
 
 
 <!--FOOTER START -->   
@@ -299,7 +310,6 @@
 <script type="text/javascript">
 
   // Original JavaScript code by Chirp Internet: www.chirp.com.au
-  // Please acknowledge use of this code by including this header.
 
   window.addEventListener("DOMContentLoaded", function(e) {
 
@@ -313,6 +323,22 @@
   }, false);
 
 </script>
+<script type="text/javascript">
+  // Original JavaScript code by Chirp Internet: www.chirp.com.au
+
+  window.addEventListener("DOMContentLoaded", function(e) {
+
+    var stage3 = document.getElementById("stage3");
+    var fadeComplete = function(e) { stage3.appendChild(arr[0]); };
+    var arr = stage3.getElementsByTagName("a");
+    for(var i=0; i < arr.length; i++) {
+      arr[i].addEventListener("animationend", fadeComplete, false);
+    }
+
+  }, false);
+
+</script>
+
 
 </body>
 
